--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.6",
-    "react": "^19.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "next": "16.1.1",
+    "react": "^19.2.3",
     "react-date-object": "^2.1.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-multi-date-picker": "^4.5.2",
     "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.18",
+    "typescript": "5.9.3"
   }
 }
