--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "next": "16.1.1",
     "react": "^19.2.3",
     "react-date-object": "^2.1.9",
@@ -25,7 +24,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "postcss": "^8",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "3.4.10",
     "typescript": "5.9.3"
   }
 }
